<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <name>LeetCode Tester</name>
  <groupId>org.codi</groupId>
  <artifactId>leetcode-tester</artifactId>
  <version>0.2.12</version>
  <packaging>jar</packaging>

  <developers>
    <developer>
      <id>the-codinator</id>
      <url>https://github.com/the-codinator</url>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/the-codinator/LeetCodeTester.git</url>
    <connection>scm:git:git@github.com:the-codinator/LeetCodeTester.git</connection>
    <tag>leetcode-tester-0.2.12</tag>
  </scm>

  <properties>
    <!-- build -->
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <plugin.compiler.version>3.12.1</plugin.compiler.version>
    <plugin.resources.version>3.3.1</plugin.resources.version>
    <plugin.surefire.version>3.2.5</plugin.surefire.version>
    <plugin.enforcer.version>3.4.1</plugin.enforcer.version>
    <plugin.versions.version>2.16.2</plugin.versions.version>
    <plugin.checkstyle.version>3.3.1</plugin.checkstyle.version>
    <config.checkstyle.version>10.3.4</config.checkstyle.version>
    <plugin.javadoc.version>3.6.3</plugin.javadoc.version>
    <plugin.sources.version>3.3.0</plugin.sources.version>
    <!-- <plugin.moditect.version>1.0.0.RC1</plugin.moditect.version> -->
    <lombok.version>1.18.30</lombok.version>
    <!-- runtime -->
    <jackson.version>2.16.1</jackson.version>
    <lang3.version>3.14.0</lang3.version>
    <junit.version>5.10.2</junit.version>
    <slf4j.version>2.0.12</slf4j.version>
    <!-- test -->
    <logback.version>1.5.0</logback.version>
  </properties>

  <build>
    <plugins>
      <!-- Compile Phase -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${plugin.compiler.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgument>-Xlint:all,-missing-explicit-ctor,-serial</compilerArgument>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${plugin.resources.version}</version>
      </plugin>

      <!-- Test Runner -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${plugin.surefire.version}</version>
        <configuration>
          <!-- Surefire JUnite Hack for Test execution in Java Modules environment -->
          <!-- https://github.com/junit-team/junit5/issues/2147 -->
          <argLine>
            --add-exports org.codi.LeetCodeTester/org.codi.lct.example=org.junit.platform.commons
            --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
            --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>

      <!-- Tools / dependency version management -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${plugin.enforcer.version}</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.9.0,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>${java.version}</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${plugin.versions.version}</version>
        <configuration>
          <rulesUri>file:///${project.basedir}/.mvn/versions-maven-plugin.rules.xml</rulesUri>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>display-dependency-updates</goal>
              <goal>display-plugin-updates</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Linting -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${plugin.checkstyle.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${config.checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
        </configuration>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Packaging & Release -->

      <!-- TODO: Add moditect for generating Java Module info -->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${plugin.sources.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${plugin.javadoc.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <show>protected</show>
          <nohelp>true</nohelp>
          <quiet>true</quiet>
          <doclint>-missing</doclint>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>the-codinator@github</id>
      <name>GitHub Packages (Maven) - github/the-codinator</name>
      <url>https://${env.GITHUB_USER}:${env.GITHUB_PAT}@maven.pkg.github.com/the-codinator/LeetCodeTester</url>
    </repository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>the-codinator@github</id>
      <name>GitHub Packages (Maven) - github/the-codinator</name>
      <url>https://${env.GITHUB_USER}:${env.GITHUB_PAT}@maven.pkg.github.com/the-codinator/LeetCodeTester</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <!-- Json -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- Utility -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${lang3.version}</version>
    </dependency>

    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
